fix overflow of top nav

--- a/client/components/package/main.scss
+++ b/client/components/package/main.scss
@@ -59,7 +59,7 @@ $dark: getColor('slate');
 	content: '';
 	position: absolute;
 	left: 50%;
-	width: 150vw;
+	width: 100vw;
 	margin-left: -50vw;
 	background: inherit;
 	top: 0;
